<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/bgsplash"
    tools:context=".MainActivity"
    tools:ignore="MissingClass">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/CsTime"
        android:layout_width="431dp"
        android:layout_height="1638dp"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/devinette_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/chrono"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="270dp"
                    android:src="@drawable/stopwatch" />

                <TextView
                    android:id="@+id/timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:paddingTop="3dp"
                    android:text="@string/DefaultTime"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/CsNiveau"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/choisirNiveau"
                    android:textAlignment="center"
                    android:textColor="@color/purple_500"
                    android:textSize="25sp" />

                <RadioGroup
                    android:id="@+id/group"
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="150dp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@+id/CsNiveau">

                    <RadioButton
                        android:id="@+id/deb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/debutant"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/expert"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/expert"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </RadioGroup>

                <Button
                    android:id="@+id/start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:layout_marginEnd="60dp"
                    android:background="@drawable/background_btn"
                    android:text="@string/nouvelle_partie" />

                <TextView
                    android:id="@+id/tv_looser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="60dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/tv_looser"
                    android:fontFamily="@font/mogra"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:padding="6dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/Looser"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:visibility="gone"/>


            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <EditText
                    android:id="@+id/ev_num"
                    android:layout_width="170dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="60dp"
                    android:background="@drawable/raidus_btn"
                    android:hint="@string/placeholder"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:inputType="number"
                    android:textAlignment="center"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="Autofill" />


                <Button
                    android:id="@+id/check"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/background_btn"
                    android:text="@string/valider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ev_num" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/score"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/his"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/hist"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:layout_marginStart="60dp"
                        android:layout_marginEnd="60dp"
                        android:background="@drawable/hist_bg"/>
                    <ScrollView
                        android:id="@+id/SVhis"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginStart="60dp"
                        android:layout_marginEnd="60dp"
                        android:background="@drawable/hist_bg_numbers"
                        >
                            <TextView
                                android:id="@+id/historique"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp"
                                android:gravity="center_horizontal"
                                android:text="20"
                                android:textStyle="bold"
                                android:textAlignment="center"
                                android:textColor="@color/black"
                                android:textSize="15sp" />
                    </ScrollView>
                    <ScrollView
                        android:layout_width="165dp"
                        android:layout_height="230dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:visibility="gone"
                        android:background="@drawable/pink_button">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="60px"
                                android:layout_marginTop="20px"
                                android:gravity="center_horizontal"
                                android:background="@drawable/white_background"
                                android:text="Top 10 Score"
                                android:textAlignment="center"
                                android:textColor="@color/black"
                                android:textSize="30px"/>
                            <TextView
                                android:id="@+id/topScore"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="60px"
                                android:gravity="center_horizontal"
                                android:layout_marginTop="20px"
                                android:background="@drawable/white_background"
                                android:textAlignment="center"
                                android:textColor="@color/black"
                                android:textSize="30px"/>
                        </LinearLayout>
                    </ScrollView>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/intentScore"
                android:layout_marginStart="75dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/transparent"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:gravity="right"
                android:visibility="gone"
                android:text="@string/afficher_les_scores"
                android:textStyle="bold"
                android:textColor="@color/dark_orange"
                android:textSize="20sp" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>


