<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/ccTrip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="24dp"
        app:cardElevation="0dp"
        app:strokeWidth="2dp"
        app:strokeColor="@color/orange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <TextView
                android:id="@+id/tvHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:textSize="30sp"
                android:textColor="@color/orange"
                android:text="@string/bravo"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints">

            </androidx.constraintlayout.widget.ConstraintLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ev_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="15dp"
                android:hint="@string/tapezNom"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxCornerRadiusTopStart="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                app:layout_constraintTop_toBottomOf="@id/s"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etAmount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:textSize="18sp"
                        android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="30dp"
                android:text="@string/finishedOn"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvHeader"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tv_FinishTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="70dp"
                android:text="7s"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toEndOf="@+id/f"
                app:layout_constraintTop_toBottomOf="@+id/tvHeader"
                 />

            <TextView
                android:id="@+id/t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="30dp"
                android:text="@string/Tentatives"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_FinishTime"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tv_Tentatives"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="70dp"
                android:text="1"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/t"
                app:layout_constraintTop_toBottomOf="@+id/tv_FinishTime"
                />


            <TextView
                android:id="@+id/s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="30dp"
                android:text="@string/score"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_Tentatives"
                 />

            <TextView
                android:id="@+id/tv_Score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="70dp"
                android:text="71"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toEndOf="@+id/s"
                app:layout_constraintTop_toBottomOf="@+id/tv_Tentatives"
                />




            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnOk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="300dp"
                android:layout_marginEnd="30dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="16dp"
                android:gravity="center"
                android:paddingVertical="16dp"
                android:visibility="visible"
                android:text="ok"
                android:backgroundTint="@color/orange"
                android:textColor="@android:color/white"
                app:cornerRadius="16dp"
                app:layout_constraintTop_toBottomOf="@id/ev_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>